# backend/src/swagger/swagger-output.json
@@ -974,6 +974,34 @@
         ]
       }
     },
+    "/student/delete/{id}": {
+      "delete": {
+        "tags": [
+          "Student"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/company/signin": {
       "post": {
         "tags": [
